deployment/deployment-base64.yml
######
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cryptfunc-base64
  namespace: cryptfunc
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cryptfunc-base64-app
  template:
    metadata:
      labels:
        app: cryptfunc-base64-app
    spec:
      containers:
      - name: cryptfunc-containers
        image: binacslee/cryptfunc:latest
        command: ["/bin/sh","-c","fs --port=:8888 --algo=BASE64"]
        ports:
        - name: http
          containerPort: 8888
