deployment/service-aes.yml
########
apiVersion: v1
kind: Service
metadata:
  name: cryptfunc-aes-svc
  namespace: cryptfunc
spec:
  type: NodePort
  selector:
    app: cryptfunc-aes-app
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
    nodePort: 30089
