deployment/service-base64.yml
########
apiVersion: v1
kind: Service
metadata:
  name: cryptfunc-base64-svc
  namespace: cryptfunc
spec:
  type: NodePort
  selector:
    app: cryptfunc-base64-app
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
    nodePort: 30088
