deployment/service-des.yml
########
apiVersion: v1
kind: Service
metadata:
  name: cryptfunc-des-svc
spec:
  type: NodePort
  selector:
    app: cryptfunc-des-app
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
    nodePort: 30090
